[gd_scene load_steps=7 format=3 uid="uid://2me1rcywnmph"]

[ext_resource type="Script" path="res://_modules/media_pool/media_pool.gd" id="1_uif5e"]
[ext_resource type="Texture2D" uid="uid://b0dnkbt4gk0wd" path="res://assets/icons/video_file.png" id="2_4b28r"]
[ext_resource type="Texture2D" uid="uid://dsew3iq7403q2" path="res://assets/icons/audio_file.png" id="3_v7gf0"]
[ext_resource type="Texture2D" uid="uid://bpxduogumk1eb" path="res://assets/icons/image_file.png" id="4_whow8"]
[ext_resource type="Texture2D" uid="uid://dxfdf5i0x6jre" path="res://assets/icons/text_file.png" id="5_2n044"]
[ext_resource type="Texture2D" uid="uid://craoaq5c3bxc3" path="res://assets/icons/color_file.png" id="6_gystb"]

[node name="MediaPool" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uif5e")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TabBar" type="TabBar" parent="VBox"]
layout_mode = 2
theme_override_constants/icon_max_width = 20
tab_count = 5
max_tab_width = 20
tab_0/title = ""
tab_0/icon = ExtResource("2_4b28r")
tab_1/title = ""
tab_1/icon = ExtResource("3_v7gf0")
tab_2/title = ""
tab_2/icon = ExtResource("4_whow8")
tab_3/title = ""
tab_3/icon = ExtResource("5_2n044")
tab_4/title = ""
tab_4/icon = ExtResource("6_gystb")

[node name="Scroll" type="ScrollContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="TabPanel" type="PanelContainer" parent="VBox/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VideosVBox" type="VBoxContainer" parent="VBox/Scroll/TabPanel"]
layout_mode = 2

[node name="AudioVBox" type="VBoxContainer" parent="VBox/Scroll/TabPanel"]
layout_mode = 2

[node name="ImagesVBox" type="VBoxContainer" parent="VBox/Scroll/TabPanel"]
layout_mode = 2

[node name="TextVBox" type="VBoxContainer" parent="VBox/Scroll/TabPanel"]
layout_mode = 2

[node name="ColorsVBox" type="VBoxContainer" parent="VBox/Scroll/TabPanel"]
layout_mode = 2

[connection signal="gui_input" from="VBox/TabBar" to="." method="_on_tab_bar_gui_input"]
[connection signal="tab_changed" from="VBox/TabBar" to="." method="_on_tab_bar_tab_clicked"]
[connection signal="tab_clicked" from="VBox/TabBar" to="." method="_on_tab_bar_tab_clicked"]
